# VSCode-CMakeTemplate

./: CMakeLists.txt  CMakePresets.json  README.md  smoke.vdb
.github/workflows/: main.yml
src/: CMakeLists.txt
src/HDF5/: CMakeLists.txt  log_residual.h5  main.cpp
src/createMask/: main.cpp
src/hello/: CMakeLists.txt  main.cpp
src/kbhit/: main.cpp
src/loading/: main.cpp
src/msgpack/: CMakeLists.txt  main.cpp
src/openvdb/: CMakeLists.txt  main.cpp
src/world/: CMakeLists.txt  main.cpp
